tdf#165354 sw xmloff: implement HyphenationKeepLine – part 2

Add loext:hyphenation-keep-line to the ODF export/import
to support HyphenationKeepLine, i.e. MS DOCX compatibility
option useWord2013TrackBottomHyphenation=false, where not
the full hyphenated line, but only the hyphenated word
is shifted to the next text block.

Add unit tests for hyphenation-keep-type="page" and "spread"
with hyphenation-keep-line="true" support.

Follow-up to commit 3e02ffb76c484a05cdc140d8a10bc3d993fe8320
"tdf#i165354 sw offapi DOCX: implement HyphenationKeepLine – part 1".

Fix unit test testTdf132599_spread, which loaded tdf132599_page.fodt
instead of tdf132599_spread.fodt (duplicating testTdf132599_page).

Restore unit test testTdf160518_auto_in_text_body_style, which was
removed by accident in commit 3e02ffb76c484a05cdc140d8a10bc3d993fe8320.

Silence the linguistic warning of HyphKeepLine, according to the
commit d25de4a04671c2f380fc86a58259b073c49dfe19
"silence unknown property 'HyphNoLastWord'... etc warnings".

Change-Id: Ibb9643f8e20ee2a1456c4d62b901e4c66b57c341
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182424
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: Jenkins