linguistic/source/lngprophelp.cxx
@@ -634,6 +634,7 @@ void PropertyHelper_Hyphen::SetTmpPropVals( const PropertyValues &rPropVals )
             pbResVal = &bResNoHyphenateCaps;
         else if (rVal.Name == UPN_HYPH_NO_LAST_WORD ||
                  rVal.Name == UPN_HYPH_KEEP ||
+                 rVal.Name == UPN_HYPH_KEEP_LINE ||
                  rVal.Name == UPN_HYPH_KEEP_TYPE)
         {
             // skip these known ones without warnings
